--- a/index.html
+++ b/index.html
@@ -39,24 +39,24 @@
         <ul id="socialLinks">
           <li class="youtube">
             <a
-              href="https://youtube.com/maykbrito"
+              href="https://youtube.com/channel/UC3u0MmnaS6vJqT3jP-hO26g"
               target="_blank"
             >
               <img src="images/youtube.svg" alt="ícone youtube" />
             </a>
           </li>
           <li class="instagram">
-            <a href="https://instagram.com/maykbrito" target="_blank">
+            <a href="https://instagram.com/geovanne.bl" target="_blank">
               <img src="images/instagram.svg" alt="ícone instagram" />
             </a>
           </li>
           <li class="facebook">
-            <a href="https://facebook.com/maykbrito" target="_blank">
+            <a href="https://facebook.com/geovanne.brasil" target="_blank">
               <img src="images/facebook.svg" alt="ícone facebook" />
             </a>
           </li>
           <li class="twitter">
-            <a href="https://twitter.com/maykbrito" target="_blank">
+            <a href="https://twitter.com/GeovanneLima19" target="_blank">
               <img src="images/twitter.svg" alt="ícone twitter" />
             </a>
           </li>
